app/globals.css
@import "tailwindcss";




.border-comet {
  animation: comet 4s linear infinite;
}
@keyframes comet {
  to {
    stroke-dashoffset: -100;
  }
}



/* In globals.css */
.font-no-name-regular {
  font-family: var(--font-no-name-regular);
}

.font-open-sans-semibold {
  font-family: var(--font-open-sans-semibold);
}

.font-open-sans-regular {
  font-family: var(--font-open-sans-regular);
}

.font-smooth-circulars {
  font-family: var(--font-smooth-circulars);
}

/* colors */
.bg-tan {
  background-color: #F6EBE2;
}
.bg-logo {
  background-color: #E5C300
}

.text-blue {
  color: #4C7D89
}

.text-dark-blue {
  color: #254C5C
}

.bg-tiles-green {
  background-color: #7b9f2c;
  background-image: url("/tegelsgroen.webp");
  background-repeat: repeat;
  background-position: top left;
  background-size: 1400px auto;
}
.bg-tiles-blue {
  background-color: #2A4B52;
  background-image: url("/donkerblauw.webp");
  background-repeat: repeat;
  background-position: top left;
  background-size: 1400px auto;
}
.bg-tiles-light-blue {
  background-color: #8DB9BD;
  background-image: url("/lichtblauw.webp");
  background-repeat: repeat;
  background-position: top left;
  background-size: 1400px auto;
}

body:has(.bg-tiles-blue) {
  background-color: #2A4B52;
}

body:has(.bg-tiles-light-blue) {
  background-color: #8DB9BD;
}

.volume-slider {
  -webkit-appearance: none;
  appearance: none;

  width: 80px;   /* length of slider */
  height: 4px;   /* thickness */
  
}

/* TRACK */
.volume-slider::-webkit-slider-runnable-track {
  height: 4px;
  background: rgba(255, 255, 255, 0.3);
  border-radius: 999px;
}

.volume-slider::-moz-range-track {
  height: 4px;
  background: rgba(255, 255, 255, 0.3);
  border-radius: 999px;
}

/* THUMB */
.volume-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 10px;
  height: 10px;
  background: white;
  border-radius: 50%;
  cursor: pointer;
  margin-top: -4px;
}

.volume-slider::-moz-range-thumb {
  width: 10px;
  height: 10px;
  background: white;
  border-radius: 50%;
  cursor: pointer;
}
















@theme {
  --breakpoint-lxl: 1380px;
  --breakpoint-vimeo: 890px;
  --breakpoint-lg: 1024px;
  --breakpoint-md: 768px;
  --breakpoint-md2: 672px;
  --breakpoint-sm: 640px;
  --breakpoint-xs2: 500px;
  --breakpoint-xs: 460px;
  --breakpoint-xxs: 386px;
  --breakpoint-xxxs: 350px;
}

